--- a/Prove3D/prove3dsite/src/main/resources/static/css/custom.css
+++ b/Prove3D/prove3dsite/src/main/resources/static/css/custom.css
@@ -24,7 +24,12 @@
 }
 
 
-
+#cha .row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 120px;
+}
 
 #cha .btn-primary {
     color: #fff;
