--- a/Prove3D/prove3dapp/src/main/java/com/projetopi/prove3dapp/telas/TelaRelatórios.form
+++ b/Prove3D/prove3dapp/src/main/java/com/projetopi/prove3dapp/telas/TelaRelatórios.form
@@ -173,7 +173,7 @@
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="4">
             <StringItem index="0" value="Todos"/>
-            <StringItem index="1" value="Aviso"/>
+            <StringItem index="1" value="Alerta"/>
             <StringItem index="2" value="Erro"/>
             <StringItem index="3" value="Ok"/>
           </StringArray>
@@ -235,11 +235,10 @@
           <Font name="Segoe UI Semibold" size="12" style="0"/>
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
+          <StringArray count="3">
             <StringItem index="0" value="CPU"/>
-            <StringItem index="1" value="Disco"/>
-            <StringItem index="2" value="GPU"/>
-            <StringItem index="3" value="Mem&#xf3;ria"/>
+            <StringItem index="1" value="GPU"/>
+            <StringItem index="2" value="Mem&#xf3;ria"/>
           </StringArray>
         </Property>
       </Properties>
